# PYaCy

./: .gitignore  DEVELOPMENT_REPORT.md  LEVEL2_REPORT.md  LICENSE  README.md  README_AGENT.md  README_EN.md  pyproject.toml  requirements.txt  run_tests.py
docs/: agent_skills.md  api_reference.md  architecture.md  index.md  quickstart.md
examples/: basic_usage.py  level2_p2p_search.py  p2p_search.py
scripts/: probe_live_seeds.py
skills/: README.md
skills/pyacy-bootstrap/: SKILL.md
skills/pyacy-crawler/: SKILL.md
skills/pyacy-rwi/: SKILL.md
skills/pyacy-search/: SKILL.md
skills/pyacy-status/: SKILL.md
skills/references/: p2p-architecture.md
src/pyacy/: __init__.py  client.py  exceptions.py  models.py  network.py  utils.py
src/pyacy/api/: __init__.py  adapter.py
src/pyacy/crawler/: __init__.py  basic.py  robots.py
src/pyacy/dht/: __init__.py  search.py
src/pyacy/indexer/: __init__.py  local.py
src/pyacy/p2p/: __init__.py  hello.py  protocol.py  seed.py  seeds.py
src/pyacy/rwi/: __init__.py  pull.py  storage.py
src/pyacy/search/: __init__.py  query_parser.py
tests/: __init__.py  _verify_dht.py  conftest.py  test_client.py  test_dht_search.py  test_live_network.py  test_network.py  test_p2p.py  test_query_parser.py  test_seed.py  test_seeds.py  test_simplecoding.py  test_utils.py
