[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyacy"
version = "0.3.1"
description = "YaCy 分布式搜索引擎的 Python 客户端库"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sun Ruikang & PYaCy Contributors"}
]
keywords = ["yacy", "search-engine", "p2p", "distributed", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
requires-python = ">=3.9"
dependencies = [
    # PYaCy 使用纯 Python 标准库（urllib），零第三方运行时依赖
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/RuikangSun/PYaCy"
Documentation = "https://github.com/RuikangSun/PYaCy#readme"
Repository = "https://github.com/RuikangSun/PYaCy.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
